--- a/config.yaml
+++ b/config.yaml
@@ -2,11 +2,11 @@ Assault Rifle: true
 Light Machine Gun: true
 Marksmen Rifle: true
 Melee Primary: true
-Melee Secondary: true
+Melee Secondary: false
 Pistol: true
 Rocket Launcher: true
 Shotgun: true
 Sniper Rifle: true
 Submachine Gun: true
 Tactical Rifle: true
-Use_Overkill: true
+Use_Overkill: false
